# hi-fastmcp

./: main.py  pyproject.toml  test.py
github/application/: get_github_user_info.py
github/domain/: repo.py  service.py  user.py
github/domain/exceptions/: user_not_found.py
github/infrastructure/: mcp_controller.py  real_github_service.py
maths/application/: quadratic_equation.py  square_root.py
maths/application/dtos/: quadratic_equation_result.py
maths/domain/exceptions/: negative.py
shared/infrastructure/: env.py
tests/: conftest.py  mocks.py  setups.py  test_github.py  test_maths.py
